--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     <meta property="og:url" content="https://www.lightontexture.com/">
     <meta property="og:title" content="LightOnTexture - San Diego Film Photography Portfolio">
     <meta property="og:description" content="Professional film photography portfolio by Ryan de Garis. Specializing in panoramic landscapes, portraiture, and still life photography in San Diego, California.">
-    <meta property="og:image" content="https://www.lightontexture.com/hero-image.jpg">
+    <meta property="og:image" content="https://www.lightontexture.com/home1.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.lightontexture.com/">
     <meta property="twitter:title" content="LightOnTexture - San Diego Film Photography Portfolio">
     <meta property="twitter:description" content="Professional film photography portfolio by Ryan de Garis. Specializing in panoramic landscapes, portraiture, and still life photography in San Diego, California.">
-    <meta property="twitter:image" content="https://www.lightontexture.com/hero-image.jpg">
+    <meta property="twitter:image" content="https://www.lightontexture.com/home1.jpg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.lightontexture.com/" />
